# dune-dpg

./: .ci-clang.opts  .ci-gcc.opts  .gitignore  .gitlab-ci.yml  .mailmap  CHANGELOG.md  CMakeLists.txt  COPYING  ChangeLog  INSTALL  INSTALL.md  Makefile.am  README  README.md  TODO  config.h.cmake  configure.ac  dune-dpg.pc.in  dune.module  guix.scm
dune/dpg/: CMakeLists.txt  Makefile.am  applylocalfunctional_rr_impl.hh  applylocalfunctional_ru_impl.hh  applylocalfunctional_uu_impl.hh  assemble.hh  assemble_helper.hh  assemble_types.hh  bilinearform.hh  bilinearformfactory.hh  boundarytools.hh  cholesky.hh  dpg.hh  dpg_system_assembler.hh  eigen_conversions.hh  errorplotter.hh  errortools.hh  faces.hh  functionhelper.hh  functionplotter.hh  getvolumeterm_impl.hh  innerproduct.hh  innerproductfactory.hh  integralterm.hh  integralterm_rr_impl.hh  integralterm_ru_impl.hh  integralterm_uu_impl.hh  leastsquares.hh  linearform.hh  linearformfactory.hh  linearfunctionalterm.hh  linearintegralterm.hh  localcoefficients.hh  localevaluation.hh  locallinearterm_impl.hh  quadrature.hh  quadratureorder.hh  refinedfaces.hh  rhs_assembler.hh  saddlepoint_system_assembler.hh  (+8 more)
dune/dpg/common/: CMakeLists.txt  memory.hh
dune/dpg/functions/: CMakeLists.txt  analyticgridviewfunction.hh  concepts.hh  constraineddiscreteglobalbasisfunction.hh  discreteglobalbasisfunction.hh  gridviewfunctions.hh  interpolate.hh  localindexsetiteration.hh  normalizedspaces.hh  normedspaces.hh  refinementinterpolation.hh  subgridinterpolation.hh
dune/dpg/functions/io/: CMakeLists.txt  vtkrefinedfunctionwriter.hh
dune/dpg/radiative_transfer/: CMakeLists.txt  approximate_scattering.hh  approximatelocalscattering_ru_impl.hh  approximatelocalscattering_uu_impl.hh  asti.hh  asti_common.hh  asti_uniform.hh  boundary_extension.hh  henyey_greenstein_scattering.hh  kanschat_scattering.hh  passkey.hh  periter.hh  periter_common.hh  periter_uniform.hh  projection.hh  scattering.hh  subgridprojection.hh  subgrids.hh  svdkernelapproximation.hh  wavelet_scattering.hh  waveletkernelapproximation.hh
dune/dpg/radiative_transfer/test/: CMakeLists.txt  test-alpertwavelets.cc  test-haarwavelets.cc  test-kernelapproximations.cc  test-subgridprojection.cc  test-wavelets.cc
dune/dpg/test/: CMakeLists.txt  test-l2norm.cc
dune/functions/functionspacebases/: CMakeLists.txt  Makefile.am  bernsteinbasis.hh  bernsteindgbasis.hh  bernsteindgrefineddgnodalbasis.hh  constrainedglobalbasis.hh  constrainedlocalindexset.hh  constrainedlocalview.hh  hangingnodebernsteinp2basis.hh  hangingnodelagrangep2basis.hh  hangingnodep2nodalbasis.hh  lagrangedgbasis.hh  lagrangedgrefineddgbasis.hh  lagrangedgsubsampleddgbasis.hh  lagrangefacebasis.hh  lagrangesubsampleddgbasis.hh  lagrangetracebasis.hh  normalizedbasisadaptor.hh  normalizedrefinedbasisadaptor.hh  optimaltestbasis.hh  pqkdgrefineddgnodalbasis.hh  pqkdgsubsampleddgbasis.hh  pqkfacenodalbasis.hh  pqksubsampleddgbasis.hh  pqksubsamplednodalbasis.hh  pqktestnodalbasis.hh  pqktracenodalbasis.hh  pqktransportnodalbasis.hh  q2facenodalbasis.hh  q2tracenodalbasis.hh  qkdiscontinuousnodalbasis.hh  referencerefinementfactory.hh  refinedglobalbasis.hh  refinedlocalview.hh  refinednode.hh
dune/functions/functionspacebases/normalizedbasisadaptor/: CMakeLists.txt  localfiniteelement.hh
dune/functions/functionspacebases/test/: CMakeLists.txt  gridviewfunctionspacebasistest.cc  hangingnodebasistest.cc  hangingnodebasistest.hh  hangingnodebernsteinbasistest.cc  hangingnodelagrangebasistest.cc  lagrangedgrefineddgbasistest.cc  lagrangetracebasistest.cc  normalizedbasistest.cc  normalizedrefinedbasistest.cc  pqkdgrefineddgbasistest.cc  pqktracenodalbasistest.cc  refinedbasistest.hh  unrefinedbasistest.hh
dune/geometry/test/: CMakeLists.txt  test-subsampledquadrature.cc
dune/localfunctions/lagrange/: CMakeLists.txt  Makefile.am  pkdgsubsampled2d.hh  pkface2d.hh  pktrace2d.hh  pqkdgsubsampledfactory.hh  pqkfacefactory.hh  pqksubsampledfactory.hh  pqktracefactory.hh  qkdiscontinuous.hh  qkface.hh  qkface2d.hh  qksubsampled.hh  qktrace.hh
dune/localfunctions/lagrange/pkdgsubsampled2d/: CMakeLists.txt  pkdgsubsampled2dlocalbasis.hh  pkdgsubsampled2dlocalcoefficients.hh  pkdgsubsampled2dlocalinterpolation.hh
dune/localfunctions/lagrange/pkface2d/: CMakeLists.txt  pkface2dlocalbasis.hh  pkface2dlocalcoefficients.hh  pkface2dlocalinterpolation.hh
dune/localfunctions/lagrange/pktrace2d/: CMakeLists.txt  pktrace2dlocalbasis.hh  pktrace2dlocalcoefficients.hh  pktrace2dlocalinterpolation.hh
dune/localfunctions/lagrange/qkdiscontinuous/: CMakeLists.txt  qkdiscontinuouslocalbasis.hh  qkdiscontinuouslocalcoefficients.hh  qkdiscontinuouslocalinterpolation.hh
dune/localfunctions/lagrange/qkface/: CMakeLists.txt  Makefile.am  qkfacelocalbasis.hh  qkfacelocalcoefficients.hh  qkfacelocalinterpolation.hh
dune/localfunctions/lagrange/qkface2d/: CMakeLists.txt  qkface2dlocalbasis.hh  qkface2dlocalcoefficients.hh  qkface2dlocalinterpolation.hh
dune/localfunctions/lagrange/qksubsampled/: CMakeLists.txt  qksubsampledlocalbasis.hh  qksubsampledlocalcoefficients.hh  qksubsampledlocalinterpolation.hh
dune/localfunctions/lagrange/qktrace/: CMakeLists.txt  (+4 more)
dune/localfunctions/optimaltestfunctions/: CMakeLists.txt  optimaltest.hh  refinedoptimaltest.hh
dune/localfunctions/test/: CMakeLists.txt  Makefile.am  test-bernstein.cc  test-pkdgsubsampled.cc  test-qksubsampled.cc  test-qktrace.cc
src/: CMakeLists.txt  Makefile.am  convergence_test.cc  dune_dpg.cc  dune_dpg_conv_diff.cc  dune_dpg_conv_diff_mod.cc  dune_dpg_error.cc  dune_dpg_opt_testspace.cc  dune_dpg_rad_trans.cc  dune_dpg_rad_trans_asti.cc  dune_dpg_rad_trans_periter.cc  dune_dpg_rad_trans_periter_uniform.cc  dune_dpg_rad_trans_wavelets.cc  dune_dpg_saddlepoint.cc  functions-poisson.cc  kernel_svds.cc  kernel_truncations.cc  manufactured_transport.cc  manufactured_transport_uniform.cc  plot_extension.cc  plot_projection.cc  plot_solution.cc  plot_solution_simple.cc  profile_testspacecoefficientmatrix.cc  trial-to-test-condition.cc  visualization.cc
(+80 files in other folders)
