add_subdirectory(pkdgsubsampled2d)
add_subdirectory(pkface2d)
add_subdirectory(pktrace2d)
add_subdirectory(qkface2d)
add_subdirectory(qksubsampled)
add_subdirectory(qktrace)

install(FILES
          pkdgsubsampled2d.hh
          pkface2d.hh
          pktrace2d.hh
          pqkdgsubsampledfactory.hh
          pqkfacefactory.hh
          pqksubsampledfactory.hh
          pqktracefactory.hh
          qkface2d.hh
          qksubsampled.hh
          qktrace.hh
        DESTINATION
          ${CMAKE_INSTALL_INCLUDEDIR}/dune/localfunctions/lagrange)
